--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/lib.rs"
 name = "spin"
 path = "src/bin.rs"
 
+[features]
+default = ["sdl"]
+sdl = []
+
 [dependencies]
 mlua = { version = "~0.10.2", features = ["lua54"] }
 sdl2 = { version = "0.37", features = ["ttf","image","gfx","mixer"] }
