--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ default = ["sdl"]
 sdl = []
 
 [dependencies]
-mlua = { version = "~0.10.2", features = ["lua54"] }
+mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
 sdl2 = { version = "0.37", features = ["ttf","image","gfx","mixer"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
