--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "spin"
+description = "Super Pinball System"
 version = "0.1.0"
 edition = "2021"
 
@@ -16,6 +17,7 @@ default = ["sdl"]
 sdl = []
 
 [dependencies]
+clap = { version = "4.5.13", features = ["cargo", "derive"] }
 mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
 sdl2 = { version = "0.37", features = ["ttf","image","gfx","mixer"] }
 serde = { version = "1.0.217", features = ["derive"] }
