--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ sdl = []
 
 [dependencies]
 clap = { version = "4.5.13", features = ["cargo", "derive"] }
+ctrlc = "3.4.5"
 mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
 sdl2 = { version = "0.37", features = ["ttf","image","gfx","mixer"] }
 serde = { version = "1.0.217", features = ["derive"] }
