--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,14 +13,16 @@ name = "spin"
 path = "src/bin.rs"
 
 [features]
-default = ["sdl"]
-sdl = []
+default = ["sdl", "server"]
+sdl = ["dep:sdl2"]
+server = ["dep:rocket"]
 
 [dependencies]
 clap = { version = "4.5.13", features = ["cargo", "derive"] }
 ctrlc = "3.4.5"
 mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
-sdl2 = { version = "0.37", features = ["ttf","image","gfx","mixer"] }
+rocket = { version = "0.5.1", optional = true }
+sdl2 = { version = "0.37", optional = true, features = ["ttf","image","gfx","mixer"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 thiserror = "2.0.11"
