--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ sdl = ["dep:sdl2"]
 server = ["dep:rocket"]
 
 [dependencies]
+ansi_term = "0.12.1"
 clap = { version = "4.5.13", features = ["cargo", "derive"] }
 ctrlc = "3.4.5"
 mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
