--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,6 @@ rustyline = "15.0.0"
 sdl2 = { version = "0.37", optional = true, features = ["ttf","image","gfx","mixer"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
+serde_yml = "0.0.12"
 thiserror = "2.0.11"
 
