--- a/example/config.yaml
+++ b/example/config.yaml
@@ -1,3 +1,8 @@
 sounds:
   - name: foo
-    path: example/swing.ogg
+    path: swing.ogg
+
+procs:
+  - name: hello
+    module: hello
+    call: hello
