--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ sdl = ["dep:sdl2"]
 ansi_term = "0.12.1"
 clap = { version = "4.5.13", features = ["cargo", "derive"] }
 ctrlc = "3.4.5"
+figment = { version = "0.10.19", features = [ "yaml" ] }
 mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
 rustyline = "15.0.0"
 sdl2 = { version = "0.37", optional = true, features = ["ttf","image","gfx","mixer"] }
