--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,13 @@ ansi_term = "0.12.1"
 clap = { version = "4.5.13", features = ["cargo", "derive"] }
 ctrlc = "3.4.5"
 figment = { version = "0.10.19", features = [ "yaml" ] }
+home = "0.5.11"
 mlua = { version = "~0.10.2", features = ["lua54", "serialize"] }
 rustyline = "15.0.0"
 sdl2 = { version = "0.37", optional = true, features = ["ttf","image","gfx","mixer"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 serde_yml = "0.0.12"
+termios = "0.3.3"
 thiserror = "2.0.11"
 
