basic game management

--- a/src/std/config/game.yaml
+++ b/src/std/config/game.yaml
@@ -1,4 +1,9 @@
 vars:
   - { name: credits, kind: !int 0 }
   - { name: free_play, kind: !bool false }
-  - { name: game_on, kind: !bool false }
+  - { name: game_active, kind: !bool false }
+
+scripts:
+  - { name: "start_game", module: "game" }
+  - { name: "start_service", module: "game" }
+  - { name: "add_player", module: "game" }
